...
        stringResource(R.string.select_location)
      }

  if (showDatePicker) {
    DatePickerDialog(
        onDismissRequest = { showDatePicker = false },
        confirmButton = {
          Button({
            val temp = Instant.ofEpochSecond((datePickerState.selectedDateMillis)?.div(1000) ?: 0)
            val formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy")
            val zonedDateTime = temp.atZone(ZoneId.systemDefault())
            selectedDate = formatter.format(zonedDateTime)
            showDatePicker = false
...
                  style = MaterialTheme.typography.titleLarge)

              if (canBeInstant.value) {
                InstantButton(
                    isSelected = instant.value,
                    onToggle = { instant.value = it },
                    modifier = Modifier.testTag("instantButton"),
                    enabled = canBeInstant.value)
              }

              IconButton(onClick = onBack, modifier = Modifier.testTag("backButton")) {
                Icon(imageVector = Icons.Default.Close, contentDescription = "Close")
              }
            }
      },
      content = { paddingValues ->
        Column(
            modifier =
                Modifier.testTag("lessonContent")
                    .fillMaxSize()
                    .verticalScroll(rememberScrollState())
                    .padding(horizontal = 24.dp)
                    .padding(paddingValues),
            verticalArrangement = Arrangement.spacedBy(8.dp)) {
              Text(stringResource(R.string.title_desc), style = MaterialTheme.typography.titleSmall)
...
                    if (it.length <= context.resources.getInteger(R.integer.lesson_title)) {
                      title = it
                    }
                  },
                  label = { Text(stringResource(R.string.give_title)) },
                  placeholder = { Text(stringResource(R.string.title_placeholder)) },
                  modifier = Modifier.fillMaxWidth().testTag("titleField"),
                  singleLine = true)

              OutlinedTextField(
                  value = description,
                  onValueChange = {
                    if (it.length <= context.resources.getInteger(R.integer.description)) {
                      description = it
                    }
                  },
                  label = { Text(stringResource(R.string.give_description)) },
                  placeholder = { Text(stringResource(R.string.description_placeholder)) },
                  modifier = Modifier.fillMaxWidth().testTag("DescriptionField"),
                  maxLines = 3)

              Spacer(modifier = Modifier.height(8.dp))

              if (!instant.value) {
                Text(
                    stringResource(R.string.select_date_time),
                    style = MaterialTheme.typography.titleSmall)

                Row(modifier = Modifier.fillMaxWidth()) {
                  Button(
                      onClick = { showDatePicker = true },
                      modifier = Modifier.weight(1f).testTag("DateButton"),
                      colors =
                          ButtonDefaults.buttonColors(
                              containerColor = MaterialTheme.colorScheme.secondaryContainer,
                              contentColor = MaterialTheme.colorScheme.onPrimary)) {
                        Text(
                            selectedDate.ifEmpty { stringResource(R.string.select_date) },
...
                      }

                  Spacer(modifier = Modifier.width(8.dp))

                  Button(
                      onClick = { showTimeDialog = true },
                      modifier = Modifier.weight(1f).testTag("TimeButton"),
                      colors =
                          ButtonDefaults.buttonColors(
                              containerColor = MaterialTheme.colorScheme.secondaryContainer,
                              contentColor = MaterialTheme.colorScheme.onPrimary)) {
                        Text(
                            selectedTime.ifEmpty { stringResource(R.string.select_time) },
...
                Text(
                    stringResource(R.string.give_location),
                    style = MaterialTheme.typography.titleSmall)

                Button(
                    onClick = { showMapDialog = true },
                    modifier = Modifier.testTag("mapButton").fillMaxWidth(),
                    colors =
                        ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.secondaryContainer,
                            contentColor = MaterialTheme.colorScheme.onPrimary)) {
                      Icon(
                          if (selectedLocation.first != 0.0 || selectedLocation.second != 0.0)
...
